# bmad-jio-spec-workflow

./: README.md  catalog-info.yaml  index.md  mkdocs.yml  openapi.json  pyproject.toml
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/planning-artifacts/: architecture.md  fsd.md  test-strategy.md
_bmad/_config/: bmad-help.csv  (+3 more)
specforge-module/: config.yaml
specforge-web/: .env  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  test_langfuse.py
specforge-web/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
specforge-web/backend/app/: config.py  db.py  main.py
specforge-web/backend/app/api/: artifacts.py  instructions.py  metrics.py  projects.py  runs.py  ws.py
specforge-web/backend/app/mcp/: server.py
specforge-web/backend/app/models/: __init__.py  artifact.py  instruction.py  llm_call.py  message.py  project.py  run.py  test_run.py
specforge-web/backend/app/schemas/: __init__.py
specforge-web/backend/app/services/: artifact_watcher.py  choreography.py  claude_runner.py  langfuse_sink.py  pipeline.py  poller.py  run_manager.py  workspace.py
specforge-web/backend/migrations/: env.py
specforge-web/backend/migrations/versions/: 001_initial.py  002_project_product_description.py
specforge-web/backend/tests/: conftest.py  test_artifact_discovery.py  test_claude_runner.py  test_instructions.py  test_poller.py  test_workspace.py
tests/: conftest.py  test_FR_001_create_habit.py  test_FR_002_list_habits.py  test_FR_003_log_completion.py  test_FR_004_view_streak.py
(+102 files in other folders)
