[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "streak"
version = "0.1.0"
description = "CLI habit tracker with daily streaks"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
streak = "streak.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
